add linux compliance, add flunetbit config for compliance

--- a/deepfence_agent/etc/fenced_logrotate.conf
+++ b/deepfence_agent/etc/fenced_logrotate.conf
@@ -1,7 +1,7 @@
 su root root
 
 /var/log/fenced/*.log {
-	missingok
+    missingok
     notifempty
     compress
     size 4M
@@ -9,7 +9,7 @@ su root root
     rotate 1
 }
 /var/log/fenced/*.logfile {
-	missingok
+    missingok
     notifempty
     compress
     size 1M
@@ -17,7 +17,7 @@ su root root
     rotate 1
 }
 /var/log/supervisor/*.log {
-	missingok
+    missingok
     notifempty
     compresss
     size 1M
@@ -25,7 +25,7 @@ su root root
     rotate 1
 }
 /var/log/fenced/secret-scan/*.log {
-	missingok
+    missingok
     notifempty
     compresss
     size 20M
@@ -33,7 +33,23 @@ su root root
     rotate 1
 }
 /var/log/fenced/secret-scan-log/*.log {
-	missingok
+    missingok
+    notifempty
+    compresss
+    size 20M
+    copytruncate
+    rotate 1
+}
+/var/log/fenced/compliance/*.log {
+    missingok
+    notifempty
+    compresss
+    size 20M
+    copytruncate
+    rotate 1
+}
+/var/log/fenced/compliance-scan-logs/*.log {
+    missingok
     notifempty
     compresss
     size 20M
