--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -105,6 +105,30 @@
     DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/secret-scan-log.db
     Parser json
 
+[INPUT]
+    Name tail
+    Path ${DF_INSTALL_DIR}/var/log/fenced/compliance/*.log
+    Tag compliance
+    storage.type filesystem
+    Buffer_Chunk_Size 4K
+    Mem_Buf_Limit 5MB
+    Refresh_Interval 10
+    Skip_Long_Lines On
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/compliance.db
+    Parser json
+
+[INPUT]
+    Name tail
+    Path ${DF_INSTALL_DIR}/var/log/fenced/compliance-scan-logs/*.log
+    Tag compliance-scan-logs
+    storage.type filesystem
+    Buffer_Chunk_Size 4K
+    Mem_Buf_Limit 5MB
+    Refresh_Interval 10
+    Skip_Long_Lines On
+    DB ${DF_INSTALL_DIR}/home/deepfence/fluentbit/compliance-scan-logs.db
+    Parser json
+
 [OUTPUT]
     Name  deepfence
     Match secret-scan
@@ -124,10 +148,35 @@
     dfport ${MGMT_CONSOLE_PORT}
     dfpath /ingest
     dftopic secret-scan-logs
+    dfkey ${DEEPFENCE_KEY}
     dfschema https
     #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+
+[OUTPUT]
+    Name  deepfence
+    Match compliance
+    dfhost ${MGMT_CONSOLE_URL}
+    dfport ${MGMT_CONSOLE_PORT}
+    dfpath /ingest
+    dftopic compliance
     dfkey ${DEEPFENCE_KEY}
+    dfschema https
+    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+
+[OUTPUT]
+    Name  deepfence
+    Match compliance-scan-logs
+    dfhost ${MGMT_CONSOLE_URL}
+    dfport ${MGMT_CONSOLE_PORT}
+    dfpath /ingest
+    dftopic compliance-scan-logs
+    dfkey ${DEEPFENCE_KEY}
+    dfschema https
+    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+
 
 #[OUTPUT]
 #    Name file
