--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -309,6 +309,8 @@ services:
     environment:
       - DEBUG=false
       - KAFKA_BROKERS=deepfence-kafka-broker:9092
+    ports:
+      - "127.0.0.1:8181:8181"
     networks:
       - deepfence_net
     depends_on:
