--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -47,3 +47,13 @@ startsecs=0
 stopwaitsecs=30
 killasgroup=true
 priority=10
+
+[program:malware_scanner]
+command=bash -c "rm -rf /tmp/malware-scanner.sock && /home/deepfence/bin/malware-scanner/MalwareScanner --config-path /home/deepfence/bin/malware-scanner --socket-path=/tmp/malware-scanner.sock"
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=0
+stopwaitsecs=30
+killasgroup=true
+priority=10
