--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "deepfence_ui_new",
+  "name": "deepfence_ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
+    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
+    "lint": "npm run lint:format && npm run lint:fix",
+    "pre-commit": "lint-staged",
+    "prepare": "cd .. && husky install deepfence_ui_new/.husky"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,8 +20,32 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
+  },
+  "engines": {
+    "node": ">=16"
+  },
+  "lint-staged": {
+    "src/**/*.+(js|jsx|json|ts|tsx)": [
+      "npm run lint:format",
+      "npm run lint:fix"
+    ],
+    "src/**/*.+(css|md)": [
+      "npm run lint:format"
+    ]
   }
 }
