set default kafka topic retention to 24hrs

--- a/deepfence_backend/dockerify/api/Dockerfile
+++ b/deepfence_backend/dockerify/api/Dockerfile
@@ -36,6 +36,7 @@ ENV PYTHONUNBUFFERED=1 \
     CUSTOMER_UNIQUE_ID="" \
     KAFKA_TOPIC_PARTITIONS=1 \
     KAFKA_TOPIC_REPLICAS=1 \
+    KAFKA_TOPIC_RETENTION_MS="86400000" \
     ES_BULK_DOC_SIZE=1000 \
     ES_BULK_NUM_WORKERS=4 \
     PROCESS_REPORT_PARALLEL=10
