--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 [submodule "deepfence_agent/plugins/malware-scanner"]
 	path = deepfence_agent/plugins/malware-scanner
 	url = https://github.com/deepfence/YaraHunter
-	branch = main
+	branch = yarahuntergrpcserver
 [submodule "deepfence_agent/plugins/SecretScanner"]
 	path = deepfence_agent/plugins/SecretScanner
 	url = https://github.com/deepfence/SecretScanner
