configure unit test

--- a/deepfence_ui_new/.eslintrc.json
+++ b/deepfence_ui_new/.eslintrc.json
@@ -38,6 +38,7 @@
     "react/prop-types": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "react/display-name": "off"
   }
 }
