--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "@vitest/coverage-c8": "^0.22.1",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "eslint": "^8.22.0",
