New Helm chart version

--- a/deployment-scripts/helm-charts/deepfence-router/templates/service.yaml
+++ b/deployment-scripts/helm-charts/deepfence-router/templates/service.yaml
@@ -101,7 +101,7 @@ spec:
                   number: 443
 {{- end }}
 ---
-{{- if eq "true" .Values.createSeparateServiceForAgents }}
+{{- if .Values.createSeparateServiceForAgents }}
 apiVersion: v1
 kind: Service
 metadata:
