--- a/deployment-scripts/helm-charts/deepfence-router/Chart.yaml
+++ b/deployment-scripts/helm-charts/deepfence-router/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: deepfence-router
-description: Deepfence Console Router - Helm chart for Kubernetes
+description: Deepfence Router - Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.4.0
+version: 1.4.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
