update new helm chart to support kafka

--- a/deployment-scripts/helm-charts/deepfence-console/templates/api/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/api/deployment.yaml
@@ -143,6 +143,11 @@ spec:
                 configMapKeyRef:
                   name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: redis_port
+            - name: KAFKA_BROKERS
+              valueFrom:
+                configMapKeyRef:
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
+                  key: kafka_brokers
           volumeMounts:
 {{- if .Values.saas_deployment }}
             - name: varlog
