--- a/deployment-scripts/helm-charts/deepfence-console/templates/router/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/router/deployment.yaml
@@ -66,7 +66,11 @@ spec:
               value: "true"
             - name: OPERATING_MODE
               value: "k8s"
-
+            - name: KAFKA_REST_PROXY
+              valueFrom:
+                configMapKeyRef:
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
+                  key: kafka_rest_proxy
           ports:
             - name: http
               containerPort: 80
