update new helm chart add kafka configurations

--- a/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/backend/deployment.yaml
@@ -156,6 +156,16 @@ spec:
                 configMapKeyRef:
                   name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                   key: kafka_brokers
+            - name: KAFKA_TOPIC_REPLICAS
+              valueFrom:
+                configMapKeyRef:
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
+                  key: kafka_topic_replicas
+            - name: KAFKA_TOPIC_RETENTION_MS
+              valueFrom:
+                configMapKeyRef:
+                  name: "main-cm-{{ include "deepfence-console.fullname" . }}"
+                  key: kafka_topic_retention_ms
           resources:
             requests:
               memory: 512Mi
