--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -49,7 +49,7 @@ killasgroup=true
 priority=10
 
 [program:malware_scanner]
-command=bash -c "rm -rf /tmp/malware-scanner.sock && /home/deepfence/bin/malware-scanner/malware-scanner --config-path /home/deepfence/bin/malware-scanner --socket-path=/tmp/malware-scanner.sock"
+command=bash -c "rm -rf /tmp/yara-hunter.sock && /home/deepfence/bin/yara-hunter/YaraHunter --config-path /home/deepfence/bin/yara-hunter --socket-path=/tmp/yara-hunter.sock"
 numprocs=1
 autostart=true
 autorestart=true
