--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -372,15 +372,15 @@ services:
       options:
         max-size: "1g"
   
-  deepfence-malware-scanner:
-    container_name: deepfence-malware-scanner
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_malware_scanner_ce:${DF_IMG_TAG:-1.4.0}
+  deepfence-YaraHunter:
+    container_name: deepfence-YaraHunter
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_yara_hunter_ce:${DF_IMG_TAG:-1.4.0}
     ulimits:
       core: 0
     restart: always
     networks:
       - deepfence_net
-    entrypoint: /home/deepfence/usr/malware-scanner
+    entrypoint: /home/deepfence/usr/YaraHunter
     command: ["-config-path","/home/deepfence/usr", "-http-port", "8011"]
     logging:
       driver: "json-file"
