--- a/deployment-scripts/helm-charts/deepfence-console/templates/internalrouter/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/internalrouter/deployment.yaml
@@ -70,6 +70,13 @@ spec:
               configMapKeyRef:
                 name: "main-cm-{{ include "deepfence-console.fullname" . }}"
                 key: kafka_rest_proxy
+          {{- if .Values.saas_deployment }}
+          - name: CUSTOMER_UNIQUE_ID
+            valueFrom:
+              secretKeyRef:
+                name: "es-secret-{{ include "deepfence-console.fullname" . }}"
+                key: es_customer_unique_id
+          {{- end }}
         volumeMounts:
         {{- if .Values.tls.pemfile }}
           - name: deepfence-cert-volume
