fix typo namespace->Namespace

--- a/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/main_all_cm.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/configmaps/main_all_cm.yaml
@@ -8,12 +8,12 @@ data:
   elasticsearch_port: "{{ .Values.db.elasticsearch.port }}"
   es_scheme: "{{ .Values.db.elasticsearch.scheme }}"
   {{- if (eq "deepfence-kafka-broker:9092" .Values.db.kafka.broker) }}
-  kafka_brokers: "deepfence-kafka-broker.{{ .Release.namespace }}.svc:9092"
+  kafka_brokers: "deepfence-kafka-broker.{{ .Release.Namespace }}.svc:9092"
   {{ else }}
   kafka_brokers: "{{ .Values.db.kafka.broker }}"
   {{- end }}
   {{- if (eq "deepfence-rest-proxy:8082" .Values.db.kafka_rest) }}
-  kafka_rest_proxy: "deepfence-rest-proxy.{{ .Release.namespace }}.svc:8082"
+  kafka_rest_proxy: "deepfence-rest-proxy.{{ .Release.Namespace }}.svc:8082"
   {{ else }}
   kafka_rest_proxy: "{{ .Values.db.kafka_rest }}"
   {{- end }}
