--- a/deployment-scripts/helm-charts/deepfence-console/templates/kafka/kafka-broker.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/kafka/kafka-broker.yaml
@@ -9,7 +9,7 @@ metadata:
     app: deepfence-console
     {{- include "deepfence-console.labels" . | nindent 4 }}
     name: deepfence-kafka-broker
-  namespace: {{ .Release.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   serviceName: deepfence-kafka-broker
   replicas: {{ .Values.kafkaBroker.replicaCount }}
@@ -108,7 +108,7 @@ metadata:
   labels:
     app: deepfence-console
     {{- include "deepfence-console.labels" . | nindent 4 }}
-  namespace: {{ .Release.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
   clusterIP: None
