--- a/deepfence_ui_new/package.json
+++ b/deepfence_ui_new/package.json
@@ -56,6 +56,7 @@
     "msw": "^0.45.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "rollup-plugin-visualizer": "^5.8.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
