--- a/deepfence_agent/plugins/Makefile
+++ b/deepfence_agent/plugins/Makefile
@@ -19,7 +19,7 @@ bin/YaraHunter: ./YaraHunter/**/*.go
 	(cd YaraHunter && make)
 	mkdir $(PWD)/bin/yara-hunter/
 	cd YaraHunter && ls
-	cp $(PWD)/YaraHunter/YaraHunter $(PWD)/bin/yara-hunter/
+	cp $(PWD)/YaraHunter $(PWD)/bin/yara-hunter/
 	cp $(PWD)/YaraHunter/config.yaml $(PWD)/bin/yara-hunter/
 
 bin/package-scanner:
