make changes to docker file

--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -53,7 +53,9 @@ COPY --from=build /usr/local/bin/syft /usr/local/bin/syft
 COPY --from=malware_build  /home/deepfence/usr/YaRadare /home/deepfence/bin/YaraHunter
 
 
-RUN rm -rf /usr/local/bin/compliance_check/*.go \
+
+RUN mkdir -p /home/deepfence/bin/yara-hunter \
+    && rm -rf /usr/local/bin/compliance_check/*.go \
     && chmod 700 /usr/local/bin/agentAuth /usr/local/bin/getCloudInstanceId \
     && chmod 700 /usr/local/discovery/deepfence-discovery /home/deepfence/run_discovery.sh \
     && chmod +x /home/deepfence/*.sh \
