--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -51,10 +51,13 @@ COPY plugins/docker_bin /home/deepfence/bin
 
 COPY --from=build /usr/local/bin/syft /usr/local/bin/syft
 COPY --from=malware_build  /home/deepfence/usr/YaRadare /home/deepfence/bin/YaraHunter
-
-
+COPY --from=malware_build /home/deepfence/rules /home/deepfence/rules
+COPY --from=malware_build /home/deepfence/usr/config.yaml /home/deepfence/bin/config.yaml
+COPY --from=malware_build /home/deepfence/usr/config.yaml /home/deepfence/usr/config.yaml
+COPY --from=malware_build /usr/local/yara /usr/local/yara
 
 RUN mkdir -p /home/deepfence/bin/yara-hunter \
+    && apt-get update && apt-get -qq -y --no-install-recommends install libjansson4 libssl1.1 libmagic1 bash curl python3-pip \
     && rm -rf /usr/local/bin/compliance_check/*.go \
     && chmod 700 /usr/local/bin/agentAuth /usr/local/bin/getCloudInstanceId \
     && chmod 700 /usr/local/discovery/deepfence-discovery /home/deepfence/run_discovery.sh \
