make changes to dockerfile

--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -15,13 +15,9 @@ ENV CHECKPOINT_DISABLE=true \
     DF_KUBERNETES_ON="N" \
     PACKAGE_SCAN_CONCURRENCY=1 
 
-    
-
 RUN export LD_LIBRARY_PATH="/usr/local/lib:$LD_LIBRARY_PATH" \
     && mkdir -p /usr/share/man/man1 /usr/share/man/man2 /usr/share/man/man3 /usr/share/man/man4 /usr/share/man/man5 /usr/share/man/man6 /usr/share/man/man7 /usr/share/man/man8 \
     && echo "Installing some basic stuff" \
-    && apt-get -qq -y --no-install-recommends install build-essential automake libtool make gcc pkg-config libssl-dev git protoc-gen-go \
-    libjansson-dev libmagic-dev \
     && apt-get update && apt-get install -y --no-install-recommends gettext ca-certificates supervisor logrotate util-linux dnsutils net-tools cgroup-tools libcgroup1 libcap2 libaudit1 conntrack runit auditd apparmor gzip lsof file curl zip at gnupg jq unzip procps cron sudo bzip2 libssl1.1 libevent-2.1-7 libevent-openssl-2.1-7 libevent-pthreads-2.1-7 libnet1 gnupg2 libfile-mimeinfo-perl libjansson4 libmagic1 bash python3-pip\
     && echo 'deb https://mirrorcache-us.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/Debian_11/ /' > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list \
     && curl -L https://mirrorcache-us.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/Debian_11/Release.key | sudo apt-key add - \
@@ -51,13 +47,37 @@ COPY run_discovery.sh /home/deepfence/
 COPY create_cgroups.sh /home/deepfence/created-cgroups.sh
 COPY plugins/docker_bin /home/deepfence/bin
 
+
+FROM golang:1.18.3-bullseye AS builder
+MAINTAINER DeepFence
+
+RUN apt-get update  \
+    && apt-get -qq -y --no-install-recommends install build-essential automake libtool make gcc pkg-config libssl-dev \
+    libjansson-dev libmagic-dev \
+    && cd /root  \
+    && wget https://github.com/VirusTotal/yara/archive/refs/tags/v4.2.1.tar.gz \
+    && tar -zxf v4.2.1.tar.gz \
+    && cd yara-4.2.1 \
+    && ./configure --prefix=/usr/local/yara --disable-dotnet --enable-magic --enable-cuckoo \
+    && make \
+    && make install \
+    && cd /usr/local/ \
+    && tar -czf yara.tar.gz yara
+
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1 \
+    && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2.0
+
+
 COPY --from=build /usr/local/bin/syft /usr/local/bin/syft
 COPY --from=malware_build  /home/deepfence/usr/YaRadare /home/deepfence/usr/YaRadare
-COPY --from=malware_build  /usr/local/yara /usr/local/yara
 COPY --from=malware_build  /home/deepfence/rules /home/deepfence/rules
 COPY --from=malware_build /home/deepfence/usr/config.yaml /home/deepfence/usr/yara-hunter/config.yaml
 
+
+
 RUN mkdir -p /home/deepfence/bin/yara-hunter \
+    && RUN cd /usr/local/ \
+    && tar -xzf yara.tar.gz \
     && rm -rf /usr/local/bin/compliance_check/*.go \
     && chmod 700 /usr/local/bin/agentAuth /usr/local/bin/getCloudInstanceId \
     && chmod 700 /usr/local/discovery/deepfence-discovery /home/deepfence/run_discovery.sh \
