make changes to docker file

--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -58,8 +58,7 @@ RUN apt-get update  \
     && wget https://github.com/VirusTotal/yara/archive/refs/tags/v4.2.1.tar.gz \
     && tar -zxf v4.2.1.tar.gz \
     && cd yara-4.2.1 \
-    && ls \
-    && pwd \
+    && autoconf \
     && ./configure --prefix=/usr/local/yara --disable-dotnet --enable-magic --enable-cuckoo \
     && make \
     && make install \
@@ -67,7 +66,7 @@ RUN apt-get update  \
     && tar -czf yara.tar.gz yara
 
 RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1 \
-    && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2.0
+    && go install    google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2.0
 
 
 COPY --from=build /usr/local/bin/syft /usr/local/bin/syft
